--- a/yahtzee/src/inspiration/yahtzee.html
+++ b/yahtzee/src/inspiration/yahtzee.html
@@ -118,7 +118,7 @@
         </tfoot>
     </table>
 
-    <script src="script.js"></script>
+    <script src="yahtzee.js"></script>
 </body>
 
 </html>
